tests/ui/async-await/issue-72442.stderr
error[E0277]: the trait bound `Option<&str>: AsRef<Path>` is not satisfied
  --> $DIR/issue-72442.rs:12:36
   |
LL |             let mut f = File::open(path.to_str())?;
   |                         ---------- ^^^^^^^^^^^^^ the trait `AsRef<Path>` is not implemented for `Option<&str>`
   |                         |
   |                         required by a bound introduced by this call
   |
note: required by a bound in `File::open`
  --> $SRC_DIR/std/src/fs.rs:LL:COL
help: consider removing this method call, as the receiver has type `&Path` and `&Path: AsRef<Path>` trivially holds
   |
LL -             let mut f = File::open(path.to_str())?;
LL +             let mut f = File::open(path)?;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
